--- a/morris/morris_lt.in
+++ b/morris/morris_lt.in
@@ -37,7 +37,7 @@ interface
     work_directory 
       named "lt_runs/run"
       directory_tag # Keep run dirs unique: required for parallelism
-      link_files = "run_dir_template/*"
+      link_files = "../run_dir_template/*"
       
       # Debug
       # directory_save # Keep individual run dirs
