--- a/morris/morris_lt.in
+++ b/morris/morris_lt.in
@@ -35,7 +35,7 @@ interface
     parameters_file = 'params.in'
     results_file    = 'responses.out'
     work_directory 
-      named "lt_runs/run"
+      named "runs/lt/run"
       directory_tag # Keep run dirs unique: required for parallelism
       link_files = "../run_dir_template/*"
       
