--- a/run_dir_template/lt_max_q_sol.template
+++ b/run_dir_template/lt_max_q_sol.template
@@ -12,12 +12,8 @@ neqns = 3
 icc = 1 * Beta
 icc = 2 * Global power balance
 icc = 11 * Radial build
-icc = 5 * Density upper limit
-icc = 8 * Neutron wall load upper limit
-icc = 9 * Fusion power upper limit
-icc = 13 * Burn time lower limit
-icc = 15 * LH power threshold limit
 icc = 30 * Injection power upper limit
+icc = 15 * LH power threshold limit
 icc = 16 * Net electric power lower limit
 icc = 24 * Beta upper limit
 icc = 25 * Peak toroidal field upper limit
@@ -35,10 +31,15 @@ icc = 81 * Ne
 icc = 68 * Psep
 icc = 31 * TF coil case stress upper limit
 icc = 32 * TF coil conduit stress upper limit
+icc = 5 * Density upper limit
+icc = 8 * Neutron wall load upper limit
+icc = 9 * Fusion power upper limit
+icc = 13 * Burn time lower limit
 
 *---------------Iteration Variables----------------*
 
 ixc = 2 * bt
+boundu(2) = 12.0
 ixc = 3 * rmajor
 boundl(3) = 8.0
 boundu(3) = 9.0
@@ -53,11 +54,10 @@ boundl(13) = 0.7
 ixc = 16 * ohcth
 boundl(16) = 0.3
 ixc = 18 * q
-boundl(18) = 3.0
+boundl(18) = 3.25
 ixc = 29 * bore
 boundl(29) = 0.1
 ixc = 37 * coheof
-ixc = 41 * fcohbop
 ixc = 44 * fvsbrnni
 ixc = 56 * tdmptf
 ixc = 57 * thkcas
@@ -95,19 +95,19 @@ boundl(140) = 0.4
 
 blnkith  = 0.7 * inboard blanket thickness (m); (calculated if `blktmodel>0`) (=0;0 if `iblnkith=0`)
 blnkoth  = 1.0 * outboard blanket thickness (m); calculated if `blktmodel>0`
-bore     = 2.044678658616753 * central solenoid inboard radius (m) (`iteration variable 29`)
+bore     = 2.379341870887877 * central solenoid inboard radius (m) (`iteration variable 29`)
 ddwex    = 0.15 * cryostat thickness (m)
 d_vv_in  = 0.3 * vacuum vessel inboard thickness (TF coil / shield) (m)
 d_vv_out = 0.3 * vacuum vessel outboard thickness (TF coil / shield) (m)
 d_vv_top = 0.3 * vacuum vessel topside thickness (TF coil / shield) (m) (= d_vv_bot if double-null)
 d_vv_bot = 0.3 * vacuum vessel underside thickness (TF coil / shield) (m)
 gapds    = 0.02 * gap between inboard vacuum vessel and thermal shield (m) (`iteration variable 61`)
-ohcth    = 0.7726636758800005 * Central solenoid thickness (m) (`iteration variable 16`)
+ohcth    = 0.6283602186152671 * Central solenoid thickness (m) (`iteration variable 16`)
 scrapli  = 0.25 * Gap between plasma and first wall; inboard side (m) (if `iscrp=1`)
 scraplo  = 0.25 * Gap between plasma and first wall; outboard side (m) (if `iscrp=1`)
 shldith  = 0.3 * inboard shield thickness (m) (`iteration variable 93`)
 shldoth  = 0.800 * outboard shield thickness (m) (`iteration variable 94`)
-tfcth    = 1.3005044303885764 * inboard TF coil thickness; (centrepost for ST) (m)
+tfcth    = 1.299979048950286 * inboard TF coil thickness; (centrepost for ST) (m)
 thshield_ib = 0.050 * TF-VV thermal shield thickness; inboard (m)
 thshield_ob = 0.050 * TF-VV thermal shield thickness; outboard (m)
 thshield_vb = 0.050 * TF-VV thermal shield thickness; vertical build (m)
@@ -128,19 +128,18 @@ vvblgap  = 0.02 * gap between vacuum vessel and blanket (m)
 *---------------Constraint Variables---------------*
 
 bmxlim   = 14.0 * maximum peak toroidal field (T) (`constraint equation 25`)
-fbetatry = 0.5 * f-value for beta limit (`constraint equation 24`; `iteration variable 36`)
+fbetatry = 1.0 * f-value for beta limit (`constraint equation 24`; `iteration variable 36`)
 fdene    = 1.2 * f-value for density limit (`constraint equation 5`; `iteration variable 9`)
-fiooic   = 0.65 * f-value for TF coil operating current / critical current ratio
-fjohc    = 0.6 * f-value for central solenoid current at end-of-flattop
-fjohc0   = 0.6 * f-value for central solenoid current at beginning of pulse
+fiooic   = 1.0 * f-value for TF coil operating current / critical current ratio
+fjohc    = 1.0 * f-value for central solenoid current at end-of-flattop
+fjohc0   = 1.0 * f-value for central solenoid current at beginning of pulse
 fjprot   = 1.0 * f-value for TF coil winding pack current density
-foh_stress = 1.0 * f-value for Tresca yield criterion in Central Solenoid
 fmaxvvstress = 1.0 * f-value for maximum permitted stress of the VV
 fvdump   = 1.0 * f-value for dump voltage (`constraint equation 34`; `iteration variable 51`)
 fwalld   = 1.0 * f-value for maximum wall load (`constraint equation 8`; `iteration variable 14`)
 pnetelin = 400.0 * required net electric power (MW) (`constraint equation 16`)
 powfmax  = 3000 * maximum fusion power (MW) (`constraint equation 9`)
-psepbqarmax = 10.0 * maximum ratio of Psep*Bt/qAR (MWT/m) (`constraint equation 68`)
+psepbqarmax = 9.7 * maximum ratio of Psep*Bt/qAR (MWT/m) (`constraint equation 68`)
 tbrnmn   = 7200.0 * minimum burn time (s) (KE - no longer itv;; see issue #706)
 walalw   = 2.0 * allowable neutron wall-load (MW/m2) (`constraint equation 8`)
 taulimit = 5.0 * Lower limit on taup/taueff the ratio of alpha particle to energy confinement
@@ -165,7 +164,7 @@ etaech   = 0.5 * ECH wall plug to injector efficiency
 gamma_ecrh = 0.30 * User input ECRH gamma (1;0e20 A/(W m^2))
 iefrf    = 10 * Switch for current drive efficiency model;
 pheat    = 75.0 * heating power not used for current drive (MW) (`iteration variable 11`)
-pinjalw  = 200.0 * maximum allowable value for injected power (MW) (`constraint equation 30`)
+pinjalw  = 100.0 * maximum allowable value for injected power (MW) (`constraint equation 30`)
 
 *-------------------Dcll Module--------------------*
 
@@ -246,8 +245,8 @@ fimp(9) = 0.0
 fimp(10) = 0.0
 fimp(11) = 0.0
 fimp(12) = 0.0
-fimp(13) = 0.000857353854680519
-fimp(14) = 5e-06
+fimp(13) = 0.0008994541408167553
+fimp(14) = 1e-05
 
 *-------------------Init Module--------------------*
 
@@ -266,7 +265,7 @@ fimp(14) = 5e-06
 
 *---------------------Numerics---------------------*
 
-minmax   = -17 * 
+minmax   = -5 * 
 neqns    = 3 * neqns /0/ ; number of equality constraints to be satisfied
 epsvmc   = 1e-7 * epsvmc /1;0e-6/ ; error tolerance for VMCON
 
@@ -278,10 +277,10 @@ epsvmc   = 1e-7 * epsvmc /1;0e-6/ ; error tolerance for VMCON
 
 *-----------------Pfcoil Variables-----------------*
 
-alstroh  = 7.5d8 * allowable hoop stress in Central Solenoid structural material (Pa)
-coheof   = 16361664.243986888 * Central solenoid overall current density at end of flat-top (A/m2) (`iteration variable 37`) (`sweep variable 62`)
+alstroh  = 7.2d8 * allowable hoop stress in Central Solenoid structural material (Pa)
+coheof   = 16462383.133504901 * Central solenoid overall current density at end of flat-top (A/m2) (`iteration variable 37`) (`sweep variable 62`)
 cptdin   = 4.0d4, 4.0d4, 4.0d4, 4.0d4, 4.0d4, 4.0d4, 4.0d4, 4.0d4 * peak current per turn input for PF coil i (A)
-fcohbop  = 0.9317779410509482 * ratio of central solenoid overall current density at beginning of pulse / end of flat-top
+fcohbop  = 1.0 * ratio of central solenoid overall current density at beginning of pulse / end of flat-top
 fcuohsu  = 0.70 * copper fraction of strand in central solenoid
 ipfloc   = 2,2,3,3 * Switch for location of PF coil group i;
 isumatoh = 1 * switch for superconductor material in central solenoid;
@@ -289,10 +288,9 @@ isumatpf = 3 * switch for superconductor material in PF coils;
 ncls     = 1,1,2,2 * number of PF coils in group j
 ngrp     = 4 * number of groups of PF coils; Symmetric coil pairs should all be in the same group
 ohhghf   = 0.9 * Central solenoid height / TF coil internal height
-oh_steel_frac = 0.4417680978635815 * central solenoid steel fraction (`iteration variable 122`)
+oh_steel_frac = 0.7098184747969579 * central solenoid steel fraction (`iteration variable 122`)
 rjconpf  = 1.1d7, 1.1d7, 6.d6, 6.d6, 8.d6, 8.0d6, 8.0d6, 8.0d6 * average winding pack current density of PF coil i (A/m2) at time of peak
 rpf2     = -1.825 * offset (m) of radial position of `ipfloc=2` PF coils from being at
-sigpfcf  = 0.666 * fraction of JxB hoop force supported by steel case for superconducting PF coils (`ipfres=0`)
 zref(1) = 3.6
 zref(2) = 1.2
 zref(3) = 1.0
@@ -315,13 +313,13 @@ zref(10) = 1.0
 alphan   = 1.00 * density profile index
 alphat   = 1.45 * temperature profile index
 aspect   = 3.0 * aspect ratio (`iteration variable 1`)
-beta     = 0.03342605471206874 * total plasma beta (`iteration variable 5`) (calculated if stellarator)
-bt       = 6.093892001951796 * toroidal field on axis (T) (`iteration variable 2`)
-dene     = 8.16822224054615e+19 * electron density (/m3) (`iteration variable 6`)
+beta     = 0.04121112706383402 * total plasma beta (`iteration variable 5`) (calculated if stellarator)
+bt       = 5.446528533336974 * toroidal field on axis (T) (`iteration variable 2`)
+dene     = 8.162610934645036e+19 * electron density (/m3) (`iteration variable 6`)
 dnbeta   = 3.0 * Troyon-like coefficient for beta scaling calculated
 fgwsep   = 0.5 * fraction of Greenwald density to set as separatrix density; If `<0`; separatrix
 fkzohm   = 1.02 * Zohm elongation scaling adjustment factor (`ishape=2; 3`)
-fvsbrnni = 0.4135134519475019 * fraction of the plasma current produced by non-inductive means (`iteration variable 44`)
+fvsbrnni = 0.4188965580439195 * fraction of the plasma current produced by non-inductive means (`iteration variable 44`)
 gamma    = 0.3 * Ejima coefficient for resistive startup V-s formula
 hfact    = 1.2 * H factor on energy confinement times; radiation corrected (`iteration variable 10`);
 ibss     = 4 * switch for bootstrap current scaling
@@ -343,13 +341,13 @@ iprofile = 1 * switch for current profile consistency;
 isc      = 34 * switch for energy confinement time scaling law (see description in `tauscl`)
 ishape   = 0 * switch for plasma cross-sectional shape calculation;
 kappa    = 1.85 * plasma separatrix elongation (calculated if `ishape = 1-5; 7 or 9-10`)
-q        = 3.6337904749757026 * Safety factor 'near' plasma edge (`iteration variable 18`) equal to q95
+q        = 3.2499999999999996 * Safety factor 'near' plasma edge (`iteration variable 18`) equal to q95
 q0       = 1.0 * safety factor on axis
-ralpne   = 0.09891791558683341 * thermal alpha density/electron density (`iteration variable 109`)
+ralpne   = 0.09546640376103013 * thermal alpha density/electron density (`iteration variable 109`)
 rmajor   = 9.0 * plasma major radius (m) (`iteration variable 3`)
 i_single_null = 1 * switch for single null / double null plasma;
 ssync    = 0.6 * synchrotron wall reflectivity factor
-te       = 16.06663199076022 * volume averaged electron temperature (keV) (`iteration variable 4`)
+te       = 15.921997584330082 * volume averaged electron temperature (keV) (`iteration variable 4`)
 triang   = 0.5 * plasma separatrix triangularity (calculated if `ishape = 1; 3-5 or 7`)
 
 *----------------------Power-----------------------*
@@ -404,20 +402,20 @@ lpulse   = 1 * Switch for reactor model;
 *-----------------Tfcoil Variables-----------------*
 
 sig_tf_case_max = 7.5e8 * Allowable maximum shear stress (Tresca criterion) in TF coil case (Pa)
-sig_tf_wp_max = 7.5e8 * Allowable maximum shear stress (Tresca criterion) in TF coil conduit (Pa)
+sig_tf_wp_max = 6.4e8 * Allowable maximum shear stress (Tresca criterion) in TF coil conduit (Pa)
 casthi   = 0.06 * inboard TF coil case plasma side thickness (m) (calculated for stellarators)
 casths   = 0.05 * inboard TF coil sidewall case thickness (m) (calculated for stellarators)
-cpttf    = 70660.67727357264 * TF coil current per turn (A); (calculated for stellarators) (calculated for
+cpttf    = 82858.87374289504 * TF coil current per turn (A); (calculated for stellarators) (calculated for
 dhecoil  = 0.01 * diameter of central helium channel in TF winding (m)
-fcutfsu  = 0.8536375214984566 * copper fraction of cable conductor (TF coils)
+fcutfsu  = 0.7459363520562939 * copper fraction of cable conductor (TF coils)
 i_tf_sc_mat = 1 * Switch for superconductor material in TF coils;
 ripmax   = 0.6 * aximum allowable toroidal field ripple amplitude at plasma edge (%)
-tdmptf   = 39.21629990299813 * fast discharge time for TF coil in event of quench (s) (`iteration variable 56`)
+tdmptf   = 26.565315536470717 * fast discharge time for TF coil in event of quench (s) (`iteration variable 56`)
 n_tf     = 16 * Number of TF coils (default = 50 for stellarators); Number of TF coils outer legs for ST
 tftmp    = 4.75 * peak helium coolant temperature in TF coils and PF coils (K)
-thkcas   = 0.43481780985917917 * inboard TF coil case outer (non-plasma side) thickness (m) (`iteration variable 57`)
-dr_tf_wp = 0.7537202156451177 * radial thickness of winding pack (m) (`iteration variable 140`) (issue #514)
-thwcndut = 0.008 * TF coil conduit case thickness (m) (`iteration variable 58`)
+thkcas   = 0.29679403022244294 * inboard TF coil case outer (non-plasma side) thickness (m) (`iteration variable 57`)
+dr_tf_wp = 0.7075875951107093 * radial thickness of winding pack (m) (`iteration variable 140`) (issue #514)
+thwcndut = 0.011035008906066415 * TF coil conduit case thickness (m) (`iteration variable 58`)
 tinstf   = 0.008 * Thickness of the ground insulation layer surrounding (m)
 tmargmin_cs = 1.5 * minimum allowable temperature margin ; CS (K)
 tmargmin = 1.5 * minimum allowable temperature margin ; TFC AND CS (K)
@@ -438,13 +436,14 @@ tramp    = 500.0 * initial PF coil charge time (s); if pulsed; = tohs
 
 *--------------Water Usage Variables---------------*
 
+
 ******************************
-* Modifications for reliability analysis: overwrites any previous values
+* Modifications for UQ: overwrites any previous values
 ******************************
 fdene = {fdene}
 hfact = {hfact}
 coreradius = {coreradius}
-* fimp(2) = {fimp_2} doesn't like being set?
+fimp(2) = {fimp_2}
 fimp(14) = {fimp_14}
 psepbqarmax = {psepbqarmax}
 flhthresh = {flhthresh}
