--- a/morris/morris_lt.in
+++ b/morris/morris_lt.in
@@ -24,9 +24,9 @@ method
 
 variables
   continuous_design = 21
-    descriptors   "fdene"  "hfact"  "coreradius"  "fimp_2"  "fimp_14"  "psepbqarmax"  "flhthresh"  "cboot"  "peakfactrad"  "kappa"  "etaech"  "feffcd"  "etath"  "etaiso"  "boundl_18"  "pinjalw"  "alstroh"  "sig_tf_wp_max"  "aspect"  "boundu_2"  "triang"
+    descriptors   "fdene"  "hfact"  "coreradius"  "ralpne"  "fimp_14"  "psepbqarmax"  "flhthresh"  "cboot"  "peakfactrad"  "kappa"  "etaech"  "feffcd"  "etath"  "etaiso"  "boundl_18"  "pinjalw"  "alstroh"  "sig_tf_wp_max"  "aspect"  "boundu_2"  "triang"
     lower_bounds      1.1      1.0          0.45   0.085  1.0e-5               8.7         0.85     0.95            2.0      1.8       0.3       0.5     0.36      0.75         3.25       51.0  6.0e8      5.2e8                 3.0        11.0       0.4
-    upper_bounds      1.3      1.2          0.75   0.115  1.0e-4               9.7         1.15     1.05            3.5      1.9       0.5       5.0     0.4       0.95         3.75       61.0  7.2e8      6.4e8                 3.2        12.0       0.6
+    upper_bounds      1.3      1.2          0.75   0.115  1.0e-4               9.7         1.15     1.05            3.5      1.9       0.5       5.0     0.4       0.95         3.75      100.0  7.2e8      6.4e8                 3.2        12.0       0.6
 
 interface
   fork
@@ -44,7 +44,8 @@ interface
       # file_save # save Dakota .in and .out files
 
 responses
-  response_functions = 27
-  descriptors "w" "eq_con001" "eq_con002" "eq_con011" "ineq_con005" "ineq_con008" "ineq_con009" "ineq_con013" "ineq_con015" "ineq_con030" "ineq_con016" "ineq_con024" "ineq_con025" "ineq_con026" "ineq_con027" "ineq_con033" "ineq_con034" "ineq_con035" "ineq_con036" "ineq_con060" "ineq_con062" "ineq_con065" "ineq_con072" "ineq_con081" "ineq_con068" "ineq_con031" "ineq_con032"
+  response_functions = 1
+  descriptors "w"
   no_gradients
   no_hessians
+  metadata "w_con_id"
