--- a/morris/morris_lt.in
+++ b/morris/morris_lt.in
@@ -23,10 +23,10 @@ method
     partitions = 3
 
 variables
-  continuous_design = 21
-    descriptors   "fdene"  "hfact"  "coreradius"  "ralpne"  "fimp_14"  "psepbqarmax"  "flhthresh"  "cboot"  "peakfactrad"  "kappa"  "etaech"  "feffcd"  "etath"  "etaiso"  "boundl_18"  "pinjalw"  "alstroh"  "sig_tf_wp_max"  "aspect"  "boundu_2"  "triang"
-    lower_bounds      1.1      1.0          0.45   0.085  1.0e-5               8.7         0.85     0.95            2.0      1.8       0.3       0.5     0.36      0.75         3.25       51.0  6.0e8      5.2e8                 3.0        11.0       0.4
-    upper_bounds      1.3      1.2          0.75   0.115  1.0e-4               9.7         1.15     1.05            3.5      1.9       0.5       5.0     0.4       0.95         3.75      100.0  7.2e8      6.4e8                 3.2        12.0       0.6
+  continuous_design = 20
+    descriptors   "fdene"  "hfact"  "coreradius"  "ralpne"  "fimp_14"  "psepbqarmax"  "flhthresh"  "cboot"  "peakfactrad"  "kappa"  "etaech"  "feffcd"  "etath"  "etaiso"  "boundl_18"  "pinjalw"  "alstroh"  "sig_tf_wp_max"  "boundu_2"  "triang"
+    lower_bounds      1.1      1.0          0.45   0.085  1.0e-5               8.7         0.85     0.95            2.0      1.8       0.3       0.5     0.36      0.75         3.25       51.0  6.0e8      5.2e8                  11.0       0.4
+    upper_bounds      1.3      1.2          0.75   0.115  1.0e-4               9.7         1.15     1.05            3.5      1.9       0.5       5.0     0.4       0.95         3.75      100.0  7.2e8      6.4e8                  12.0       0.6
 
 interface
   fork
