--- a/sa/sa_lt_max_q.in
+++ b/sa/sa_lt_max_q.in
@@ -31,13 +31,13 @@ method
 variables
   active epistemic
   continuous_interval_uncertain = 8
-    descriptors   "fimp_14"  "triang"  "kappa"  "flhthresh"   "cboot"  "etaech"  "etath"  "etaiso"
-    lower_bounds  1.0e-5          0.4    1.8         0.85      0.95       0.3     0.36      0.75
-    upper_bounds  1.0e-4          0.6    1.9         1.15      1.05       0.5     0.4       0.95
+    descriptors   "fimp_14" "ralpne" "kappa"  "flhthresh"  "boundu_2"  "cboot" "pinjalw"  "etath"
+    lower_bounds  1.0e-5     0.085     1.8         0.85        11.0     0.95      51.0     0.36   
+    upper_bounds  1.0e-4     0.115     1.9         1.15        12.0     1.05     100.0     0.4    
   # State vars at solution values
-  continuous_state = 13
-    descriptors = "fdene"  "hfact"  "coreradius"  "fimp_2"  "psepbqarmax"  "peakfactrad"  "feffcd"  "boundl_18"  "pinjalw"  "alstroh"  "sig_tf_wp_max"  "aspect"  "boundu_2"
-    initial_state =   1.2  1.2  0.7500000000000001  0.1  10.0  3.33  1.0  3.0  200.0  750000000.0  750000000.0  3.0  30.0
+  continuous_state = 12
+    descriptors = "fdene"  "hfact"  "coreradius"  "psepbqarmax"  "peakfactrad"  "etaech"  "feffcd"  "etaiso"  "boundl_18"  "alstroh"  "sig_tf_wp_max"  "triang"
+    initial_state =     1.2  1.2  0.7500000000000001  9.7  3.33  0.5  1.0  0.9  3.25  720000000.0  640000000.0  0.5
 
 interface
   fork
@@ -55,7 +55,8 @@ interface
       # file_save # save Dakota .in and .out files
 
 responses
-  response_functions = 27
-  descriptors "w" "eq_con001" "eq_con002" "eq_con011" "ineq_con005" "ineq_con008" "ineq_con009" "ineq_con013" "ineq_con015" "ineq_con030" "ineq_con016" "ineq_con024" "ineq_con025" "ineq_con026" "ineq_con027" "ineq_con033" "ineq_con034" "ineq_con035" "ineq_con036" "ineq_con060" "ineq_con062" "ineq_con065" "ineq_con072" "ineq_con081" "ineq_con068" "ineq_con031" "ineq_con032"
+  response_functions = 1
+  descriptors "w"
   no_gradients
   no_hessians
+  metadata "w_con_id"
