--- a/interval_analysis/ia_lt_max_q_8p.in
+++ b/interval_analysis/ia_lt_max_q_8p.in
@@ -3,13 +3,13 @@
 
 # Dakota Input File
 # Usage:
-#   dakota -i ia_lt_max_net_elec_8p.in > ia_lt_max_net_elec_8p.out
+#   dakota -i ia_lt_max_q_8p.in > ia_lt_max_q_8p.out
 
 environment
   # Full output data (stdout)
-  # output_file "ia_lt_max_net_elec_8p.out"
+  # output_file "ia_lt_max_q_8p.out"
   # Error file (stderr)
-  # error_file "ia_lt_max_net_elec_8p_err.log"
+  # error_file "ia_lt_max_q_8p_err.log"
   # Final results (e.g. best parameters, summary data)
   # results_output
     # Final results not in text output or h5 output!
@@ -19,7 +19,7 @@ environment
     # results_output_file "results"
   # Outputs evaluations only, not final results
   # tabular_data
-    # tabular_data_file "ia_lt_max_net_elec_8p.dat"
+    # tabular_data_file "ia_lt_max_q_8p.dat"
 
 # IA study
 method
@@ -41,11 +41,11 @@ variables
 interface
   fork
     labeled
-    analysis_drivers = 'python process_driver.py lt_max_net_elec_sol.template'
+    analysis_drivers = 'python process_driver.py lt_max_q_sol.template'
     parameters_file = 'params.in'
     results_file    = 'responses.out'
     work_directory 
-      named "runs/lt/run"
+      named "runs/lt_max_q/run"
       directory_tag # Keep run dirs unique: required for parallelism
       link_files = "../run_dir_template/*"
       
