Correct SA: triang not boundu(2) uncertain param

--- a/sa/sa_lt_max_q.in
+++ b/sa/sa_lt_max_q.in
@@ -31,13 +31,13 @@ method
 variables
   active epistemic
   continuous_interval_uncertain = 8
-    descriptors   "fimp_14" "ralpne" "kappa"  "flhthresh"  "boundu_2"  "cboot" "pinjalw"  "etath"
-    lower_bounds  1.0e-5     0.085     1.8         0.85        11.0     0.95      51.0     0.36   
-    upper_bounds  1.0e-4     0.115     1.9         1.15        12.0     1.05     100.0     0.4    
+    descriptors   "fimp_14" "ralpne" "kappa"  "flhthresh"  "triang"  "cboot" "pinjalw"  "etath"
+    lower_bounds  1.0e-5     0.085     1.8         0.85        0.4    0.95      51.0     0.36   
+    upper_bounds  1.0e-4     0.115     1.9         1.15        0.6    1.05     100.0     0.4    
   # State vars at solution values
   continuous_state = 12
-    descriptors = "fdene"  "hfact"  "coreradius"  "psepbqarmax"  "peakfactrad"  "etaech"  "feffcd"  "etaiso"  "boundl_18"  "alstroh"  "sig_tf_wp_max"  "triang"
-    initial_state =     1.2  1.2  0.7500000000000001  9.7  3.33  0.5  1.0  0.9  3.25  720000000.0  640000000.0  0.5
+    descriptors = "fdene"  "hfact"  "coreradius"  "psepbqarmax"  "peakfactrad"  "etaech"  "feffcd"  "etaiso"  "boundl_18"  "alstroh"  "sig_tf_wp_max"  "boundu_2"
+    initial_state =      1.2  1.2  0.7500000000000001  9.7  3.33  0.5  1.0  0.9  3.25  720000000.0  640000000.0  12.0
 
 interface
   fork
