Separate lt and max q for IA
LHS files being shared by concurrent IA: race condition

--- a/interval_analysis/lt/ia_lt_8p.in
+++ b/interval_analysis/lt/ia_lt_8p.in
@@ -24,7 +24,9 @@ environment
 # IA study
 method
     global_interval_est ego
-    seed = 1234567
+    # seed = 1234567
+    # convergence_tolerance = 1.0e-5
+    samples = 200
 
 variables
   continuous_interval_uncertain = 8
