--- a/interval_analysis/lt_max_q/ia_lt_max_q_8p.in
+++ b/interval_analysis/lt_max_q/ia_lt_max_q_8p.in
@@ -24,7 +24,7 @@ environment
 # IA study
 method
     global_interval_est ego
-    samples = 200
+    samples = 500
 
 variables
   continuous_interval_uncertain = 8
@@ -45,9 +45,9 @@ interface
     parameters_file = 'params.in'
     results_file    = 'responses.out'
     work_directory 
-      named "runs/lt_max_q/run"
+      named "runs/run"
       directory_tag # Keep run dirs unique: required for parallelism
-      link_files = "../run_dir_template/*"
+      link_files = "../../run_dir_template/*"
       
       # Debug
       # directory_save # Keep individual run dirs
